--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.5",
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
