add type: module

--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,9 @@
 {
+	"name": "server",
+	"version": "1.0.0",
+	"type": "module",
+	"description": "basic server for todo app",
+	"main": "server.js",
 	"scripts": {
 		"start": "nodemon server.js"
 	},
